--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
- * {
+* {
   box-sizing: border-box;
 }
 
@@ -8,11 +8,12 @@ body {
 }
 
 h1 {
-  font-family: 'Big Shoulders Display', cursive;
+  font-family: "Big Shoulders Display", cursive;
 }
 
-p, button {
-  font-family: 'Lexend Deca', sans-serif;
+p,
+button {
+  font-family: "Lexend Deca", sans-serif;
 }
 
 p {
